--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 #Postgres
 APP_ENV=
 API_PORT=8080
-DB_HOST=localhost             
+DB_HOST=db             
 DB_DRIVER=postgres
 DB_USER=postgres
-DB_PASS=golang
-DB_NAME=go_person
+DB_PASS=postgres
+DB_NAME=postgres
 DB_PORT=5432
 
 #Postgres Test DB
